...
"Add Another Duration" = "Add Another Duration";
"Add scheduled task" = "Add scheduled task";
"Add task" = "Add task";
"Add the first task for this project below." = "Add the first task for this project below.";
"Add This Occurrence to Calendar" = "Add This Occurrence to Calendar";
"Add to Calendar" = "Add to Calendar";
"Add to schedule" = "Add to schedule";
"Added from Listello" = "Added from Listello";
"Added to Apple Calendar." = "Added to Apple Calendar.";
"After 1 day" = "After 1 day";
"After 7 days" = "After 7 days";
"After 30 days" = "After 30 days";
"Alert me when each scheduled task is due" = "Alert me when each scheduled task is due";
...
"Nothing completed yet" = "Nothing completed yet";
"Nothing to do" = "Nothing to do";
"Notifications for this day" = "Notifications for this day";
"Notify me at this time" = "Notify me at this time";
"Notify newly scheduled tasks" = "Notify newly scheduled tasks";
"OK" = "OK";
"Open projects" = "Open projects";
"Pick again" = "Pick again";
"Plan simply. Get things done." = "Plan simply. Get things done.";
"Previous day" = "Previous day";
"Project" = "Project";
"Project name" = "Project name";
"Projects" = "Projects";
...
